Fixed burger overflow

--- a/src/components/readingComponent/ReadingComponent.module.css
+++ b/src/components/readingComponent/ReadingComponent.module.css
@@ -12,7 +12,7 @@
     height: 100%;
     margin-right: 20px;
     flex: 1;
-    justify-content: end;
+    justify-content: flex-end;
     align-items: center;
 }
 
